# ckpy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
src/ckpy/: __init__.py  stats.py
tests/: test_stats.py  test_stats_coverage.py
